--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "postinstall": "flowbite-react patch"
   },
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "axios": "^1.9.0",
     "flowbite-react": "^0.11.7",
+    "pdfjs-dist": "^5.2.133",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-pdf": "^9.2.1",
     "react-router-dom": "^7.5.3"
   },
   "devDependencies": {
@@ -34,6 +38,7 @@
     "tailwindcss": "^4.1.4",
     "typescript": "~5.7.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.2.6"
+    "vite": "^6.2.6",
+    "vite-plugin-static-copy": "^3.0.0"
   }
 }
