--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "flowbite-react": "^0.11.7",
     "pdfjs-dist": "^5.2.133",
     "react": "^19.1.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.5.3"
